@@ -71,6 +71,7 @@ shadow-4.1.4.3 -> shadow-4.1.5					UNRELEASED
 - useradd
   * If the skeleton directory contained hardlinked files, copies of the
     hardlink were removed from the skeleton directory.
+  * Add --root option.
 - userdel
   * Check the existence of the user's mail spool before trying to remove
     it. If it does not exist, a warning is issued, but no failure.
